--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/js-cookie": "^3.0.2",
+    "@types/mockjs": "^1.0.7",
     "@types/node": "^16.11.36",
     "@types/nprogress": "^0.2.0",
     "@types/path-browserify": "^1.0.0",
@@ -35,6 +36,7 @@
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "mockjs": "^1.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "sass": "^1.52.3",
