--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "path-to-regexp": "^6.2.1",
     "pinia": "^2.0.14",
     "vue": "^3.2.36",
+    "vue-echarts": "^6.5.5",
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
